# backend/docs/swagger.yaml
@@ -75,6 +75,24 @@ definitions:
     - id
     - name
     type: object
+  internal_infrastructure_http_handlers.ChestRewardDTO:
+    properties:
+      chestType:
+        type: string
+      coins:
+        type: integer
+      marathonBonuses:
+        items:
+          type: string
+        type: array
+      pvpTickets:
+        type: integer
+    required:
+    - chestType
+    - coins
+    - marathonBonuses
+    - pvpTickets
+    type: object
   internal_infrastructure_http_handlers.CreateCategoryData:
     properties:
       category:
@@ -220,12 +238,18 @@ definitions:
         type: array
       baseScore:
         type: integer
+      chestReward:
+        $ref: '#/definitions/internal_infrastructure_http_handlers.ChestRewardDTO'
       correctAnswers:
         type: integer
       currentStreak:
         type: integer
       finalScore:
         type: integer
+      leaderboard:
+        items:
+          $ref: '#/definitions/internal_infrastructure_http_handlers.LeaderboardEntryDTO'
+        type: array
       percentile:
         type: integer
       rank:
@@ -239,9 +263,11 @@ definitions:
     required:
     - answeredQuestions
     - baseScore
+    - chestReward
     - correctAnswers
     - currentStreak
     - finalScore
+    - leaderboard
     - percentile
     - rank
     - streakBonus
@@ -711,6 +737,36 @@ definitions:
     - bestStreak
     - category
     type: object
+  internal_infrastructure_http_handlers.OpenChestData:
+    properties:
+      chestType:
+        type: string
+      premiumApplied:
+        type: boolean
+      rewards:
+        $ref: '#/definitions/internal_infrastructure_http_handlers.ChestRewardDTO'
+      streakBonus:
+        type: number
+    required:
+    - chestType
+    - premiumApplied
+    - rewards
+    - streakBonus
+    type: object
+  internal_infrastructure_http_handlers.OpenChestRequest:
+    properties:
+      playerId:
+        type: string
+    required:
+    - playerId
+    type: object
+  internal_infrastructure_http_handlers.OpenChestResponse:
+    properties:
+      data:
+        $ref: '#/definitions/internal_infrastructure_http_handlers.OpenChestData'
+    required:
+    - data
+    type: object
   internal_infrastructure_http_handlers.QuestionDTO:
     properties:
       answers:
@@ -800,6 +856,43 @@ definitions:
     properties:
       data:
         $ref: '#/definitions/internal_infrastructure_http_handlers.RegisterUserData'
+    required:
+    - data
+    type: object
+  internal_infrastructure_http_handlers.RetryChallengeData:
+    properties:
+      coinsDeducted:
+        type: integer
+      firstQuestion:
+        $ref: '#/definitions/internal_infrastructure_http_handlers.QuestionDTO'
+      newGameId:
+        type: string
+      remainingCoins:
+        type: integer
+      timeLimit:
+        type: integer
+    required:
+    - coinsDeducted
+    - firstQuestion
+    - newGameId
+    - remainingCoins
+    - timeLimit
+    type: object
+  internal_infrastructure_http_handlers.RetryChallengeRequest:
+    properties:
+      paymentMethod:
+        description: '"coins" or "ad"'
+        type: string
+      playerId:
+        type: string
+    required:
+    - paymentMethod
+    - playerId
+    type: object
+  internal_infrastructure_http_handlers.RetryChallengeResponse:
+    properties:
+      data:
+        $ref: '#/definitions/internal_infrastructure_http_handlers.RetryChallengeData'
     required:
     - data
     type: object
@@ -1359,6 +1452,88 @@ paths:
           schema:
             $ref: '#/definitions/internal_infrastructure_http_handlers.ErrorResponse'
       summary: Submit answer
+      tags:
+      - daily-challenge
+  /daily-challenge/{gameId}/chest/open:
+    post:
+      consumes:
+      - application/json
+      description: Get chest rewards (idempotent)
+      parameters:
+      - description: Game ID
+        in: path
+        name: gameId
+        required: true
+        type: string
+      - description: Open chest request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/internal_infrastructure_http_handlers.OpenChestRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Chest opened
+          schema:
+            $ref: '#/definitions/internal_infrastructure_http_handlers.OpenChestResponse'
+        "400":
+          description: Game not completed
+          schema:
+            $ref: '#/definitions/internal_infrastructure_http_handlers.ErrorResponse'
+        "404":
+          description: Game not found
+          schema:
+            $ref: '#/definitions/internal_infrastructure_http_handlers.ErrorResponse'
+        "500":
+          description: Internal error
+          schema:
+            $ref: '#/definitions/internal_infrastructure_http_handlers.ErrorResponse'
+      summary: Open chest
+      tags:
+      - daily-challenge
+  /daily-challenge/{gameId}/retry:
+    post:
+      consumes:
+      - application/json
+      description: Create second attempt (costs 100 coins or ad)
+      parameters:
+      - description: Original Game ID
+        in: path
+        name: gameId
+        required: true
+        type: string
+      - description: Retry request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/internal_infrastructure_http_handlers.RetryChallengeRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Retry started
+          schema:
+            $ref: '#/definitions/internal_infrastructure_http_handlers.RetryChallengeResponse'
+        "400":
+          description: Invalid request or insufficient coins
+          schema:
+            $ref: '#/definitions/internal_infrastructure_http_handlers.ErrorResponse'
+        "404":
+          description: Game not found
+          schema:
+            $ref: '#/definitions/internal_infrastructure_http_handlers.ErrorResponse'
+        "409":
+          description: Retry limit reached
+          schema:
+            $ref: '#/definitions/internal_infrastructure_http_handlers.ErrorResponse'
+        "500":
+          description: Internal error
+          schema:
+            $ref: '#/definitions/internal_infrastructure_http_handlers.ErrorResponse'
+      summary: Retry challenge
       tags:
       - daily-challenge
   /daily-challenge/leaderboard:
